fixing partner logo spacing

--- a/main.css
+++ b/main.css
@@ -322,17 +322,22 @@ justify-content: center;
 
 #partnerLogos{
   width: 90%;
-  display: flex; 
-  flex-direction: row; 
-  justify-content: space-between;
-  align-items: center;
+  display: grid; 
+  grid-template-columns: 20% 20% 20% 20%; 
+  grid-template-rows: 40%;  
+  grid-gap: 5%; 
 }
 
 .partnerLogoLink{
-  width: 20%;
+  width: 100%;
+  height: 100%; 
+  align-self: center; 
+  justify-self: center; 
 }
 .partnerLogo{
   width: 100%;
+  min-height: 80px; 
+  max-height: 330px; 
 }
 
 
@@ -577,34 +582,30 @@ width: 100%;
     grid-gap: 5%; 
   }
 
-
   .sponsorLogoLink{
     min-width: 60%; 
     max-width: 100%; 
   }
-
 
   .sponsorLogo{
     width: 100%; 
   }
 
   #partnerLogos{
-    max-height: 70%; 
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    height: 80%; 
+    width: 85%; 
+    display: grid; 
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(4, 20%);
   }
 
   .partnerLogoLink{
     min-width: 60%; 
-    max-width: 70%; 
-    margin-top: 5%; 
-    margin-bottom: 5%; 
+    max-width: 90%; 
   }
 
   .partnerLogo{
     width: 100%; 
-    height: 100%; 
   }
 
   #intro-contact{ 
